# ComfyUI-KokoroTTS

./: KokoroTextToSpeech.py  README.md  pyproject.toml
workflow example/: kokorotts basic.json  kokorotts with LatentSync.json
