[project]
name = "ComfyUIkokorotts"
description = "A Text To Speech node using Kokoro TTS in ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["kokoro-onnx", "onnxruntime", "numpy"]

[project.urls]
Repository = "https://github.com/benjiyaya/ComfyUI-KokoroTTS"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "benjiyaya"
DisplayName = "ComfyUI-KokoroTTS"
Icon = ""
